syntax = "proto3";

package habit.events;
option java_multiple_files = true;

message HabitEvent {
  string habitId = 1;
  string name = 2;
  string description = 3;
  string email = 4;
  string event_type = 5;
  string habitDate = 6;
}
